Fix: Исправлена инициализация ES6 модулей профиля

--- a/public/profile.html
+++ b/public/profile.html
@@ -1979,7 +1979,7 @@
         </div>
     </div>
 
-    <!-- Scripts -->
+    <!-- Scripts - подключаем все модули как ES6 модули -->
     <script type="module">
         // Проверяем, что мы внутри Telegram WebApp
         function checkTelegramAccess() {
@@ -1997,36 +1997,20 @@
                         text-align: center;
                         padding: 20px;
                     ">
-                        <div style="font-size: 64px; margin-bottom: 20px; color: #8B0000;">🚫</div>
-                        <h1 style="margin: 0 0 16px 0; font-size: 24px; color: #DC143C;">Доступ ограничен</h1>
-                        <p style="margin: 0 0 24px 0; font-size: 16px; opacity: 0.8; max-width: 400px;">
-                            Criminal Trust доступен только через официального Telegram бота.
-                        </p>
-                        <div style="
-                            background: linear-gradient(135deg, #8B0000, #DC143C);
-                            color: white;
-                            padding: 12px 24px;
-                            border-radius: 8px;
-                            text-decoration: none;
-                            display: inline-block;
-                            font-weight: bold;
-                            box-shadow: 0 8px 32px rgba(139, 0, 0, 0.5);
-                        ">
-                            🤖 Открыть в Telegram
-                        </div>
+                        <div style="font-size: 3rem; margin-bottom: 20px;">🚫</div>
+                        <h1 style="margin: 0 0 10px 0; font-size: 1.5rem;">ДОСТУП ОГРАНИЧЕН</h1>
+                        <p style="margin: 0 0 20px 0; opacity: 0.8;">Это приложение работает только в Telegram Mini Apps</p>
+                        <p style="margin: 0; font-size: 0.9rem; opacity: 0.6;">Откройте приложение через бота в Telegram</p>
                     </div>
                 `;
-                throw new Error('Доступ только через Telegram WebApp');
+                return false;
             }
+            return true;
         }
 
-        // Выполняем проверку сразу
-        checkTelegramAccess();
-
-        // Инициализируем Telegram WebApp
-        if (window.Telegram && window.Telegram.WebApp) {
-            window.Telegram.WebApp.ready();
-            window.Telegram.WebApp.expand();
+        // Проверяем доступ при загрузке
+        if (!checkTelegramAccess()) {
+            throw new Error('Приложение доступно только в Telegram');
         }
 
         // Инициализируем профиль после загрузки DOM
@@ -2045,117 +2029,40 @@
                 console.error('❌ Ошибка инициализации профиля:', error);
                 console.error('❌ Стек ошибки:', error.stack);
 
-                // Показываем детальную ошибку для отладки
-                const errorDetails = error.message + (error.stack ? '\n\n' + error.stack : '');
+                // Показываем тестовые данные для отладки
+                const errorElement = document.getElementById('user-name');
+                if (errorElement) {
+                    errorElement.textContent = 'ОШИБКА ЗАГРУЗКИ ПРОФИЛЯ';
+                    errorElement.style.color = '#ff4444';
+                }
 
-                // Показываем ошибку пользователю с возможностью отладки
-                document.body.innerHTML = `
+                // Показываем детальную информацию об ошибке
+                const errorDetails = document.createElement('div');
+                errorDetails.innerHTML = `
                     <div style="
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        justify-content: center;
-                        height: 100vh;
-                        background: linear-gradient(45deg, #000000, #1a0000, #330000);
-                        color: #F5F5DC;
-                        font-family: 'JetBrains Mono', monospace;
-                        text-align: center;
-                        padding: 20px;
+                        position: fixed; 
+                        top: 20px; 
+                        left: 20px; 
+                        right: 20px; 
+                        background: rgba(255, 0, 0, 0.9); 
+                        color: white; 
+                        padding: 15px; 
+                        border-radius: 8px; 
+                        font-family: monospace; 
+                        font-size: 12px;
+                        z-index: 9999;
+                        max-height: 200px;
                         overflow-y: auto;
                     ">
-                        <div style="font-size: 64px; margin-bottom: 20px; color: #DC143C;">⚠️</div>
-                        <h1 style="margin: 0 0 16px 0; font-size: 24px; color: #DC143C;">Ошибка загрузки профиля</h1>
-                        <p style="margin: 0 0 24px 0; font-size: 16px; opacity: 0.8; max-width: 600px;">
-                            Не удалось загрузить данные профиля. Проверьте подключение к интернету и работу сервера.
-                        </p>
-                        <details style="margin-bottom: 24px; max-width: 600px; text-align: left;">
-                            <summary style="color: #FFD700; cursor: pointer; font-weight: bold;">🔍 Детали ошибки (для разработчика)</summary>
-                            <pre style="
-                                background: rgba(0,0,0,0.5);
-                                padding: 12px;
-                                border-radius: 8px;
-                                margin-top: 12px;
-                                font-size: 12px;
-                                white-space: pre-wrap;
-                                word-wrap: break-word;
-                                color: #FF6B6B;
-                                border-left: 3px solid #DC143C;
-                            ">${errorDetails}</pre>
-                        </details>
-                        <div style="display: flex; gap: 16px; flex-wrap: wrap; justify-content: center;">
-                            <button onclick="window.location.reload()" style="
-                                background: linear-gradient(135deg, #8B0000, #DC143C);
-                                color: white;
-                                padding: 12px 24px;
-                                border: none;
-                                border-radius: 8px;
-                                font-weight: bold;
-                                cursor: pointer;
-                                box-shadow: 0 8px 32px rgba(139, 0, 0, 0.5);
-                            ">
-                                🔄 Перезагрузить
-                            </button>
-                            <button onclick="loadTestData()" style="
-                                background: linear-gradient(135deg, #FFD700, #FFA500);
-                                color: #000;
-                                padding: 12px 24px;
-                                border: none;
-                                border-radius: 8px;
-                                font-weight: bold;
-                                cursor: pointer;
-                                box-shadow: 0 8px 32px rgba(255, 215, 0, 0.3);
-                            ">
-                                🛠️ Загрузить тестовые данные
-                            </button>
-                            <button onclick="window.location.href='/'" style="
-                                background: linear-gradient(135deg, #666, #999);
-                                color: white;
-                                padding: 12px 24px;
-                                border: none;
-                                border-radius: 8px;
-                                font-weight: bold;
-                                cursor: pointer;
-                                box-shadow: 0 8px 32px rgba(102, 102, 102, 0.3);
-                            ">
-                                🏠 На главную
-                            </button>
-                        </div>
+                        <strong>🔧 DEBUG INFO:</strong><br>
+                        Error: ${error.message}<br>
+                        Stack: ${error.stack ? error.stack.substring(0, 300) + '...' : 'No stack trace'}<br>
+                        Time: ${new Date().toISOString()}<br>
+                        URL: ${window.location.href}<br>
+                        UserAgent: ${navigator.userAgent.substring(0, 100)}...
                     </div>
                 `;
-
-                // Функция для загрузки тестовых данных
-                window.loadTestData = function () {
-                    console.log('🛠️ Загружаем тестовые данные...');
-
-                    // Заполняем элементы тестовыми данными
-                    document.body.innerHTML = `
-                        ${document.querySelector('.profile-container').outerHTML}
-                    `;
-
-                    // Заполняем тестовые данные
-                    setTimeout(() => {
-                        document.getElementById('detective-name').textContent = 'DEVELOPER';
-                        document.getElementById('detective-name').setAttribute('data-text', 'DEVELOPER');
-                        document.getElementById('user-id').textContent = '5731136459';
-                        document.getElementById('user-level').textContent = '15';
-                        document.getElementById('detective-rank').textContent = 'ДЕТЕКТИВ';
-
-                        document.getElementById('current-xp').textContent = '2850';
-                        document.getElementById('max-xp').textContent = '3000';
-                        document.getElementById('xp-bar').style.width = '95%';
-
-                        document.getElementById('stat-investigations').textContent = '42';
-                        document.getElementById('stat-solved').textContent = '38';
-                        document.getElementById('stat-streak').textContent = '7';
-                        document.getElementById('stat-accuracy').innerHTML = '90<span style="color: var(--neon-red);">%</span>';
-
-                        document.getElementById('achievements-count').textContent = '12';
-                        document.getElementById('user-position').textContent = '5';
-                        document.getElementById('total-players').textContent = '1,234';
-
-                        console.log('✅ Тестовые данные загружены');
-                    }, 100);
-                };
+                document.body.appendChild(errorDetails);
             }
         });
     </script>
