Fix: Исправлены ID элементов HTML для соответствия JavaScript коду

--- a/public/profile.html
+++ b/public/profile.html
@@ -1866,7 +1866,7 @@
                 </div>
 
                 <div class="level-badge-center">LVL <span id="user-level">—</span></div>
-                <div class="profile-name" id="detective-name" data-text="—">—</div>
+                <div class="profile-name" id="user-name" data-text="—">—</div>
                 <div class="profile-id">ДОСЬЕ: <span id="user-id">—</span></div>
 
                 <!-- Ультра-современная шкала опыта -->
@@ -1885,19 +1885,19 @@
             <!-- Криминальная статистика -->
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-value" id="stat-investigations">—</div>
-                    <div class="stat-label">Расследований</div>
+                    <div class="stat-value" id="user-total-score">—</div>
+                    <div class="stat-label">Общий счет</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value" id="stat-solved">—</div>
-                    <div class="stat-label">Раскрыто дел</div>
+                    <div class="stat-value" id="user-games-played">—</div>
+                    <div class="stat-label">Игр сыграно</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-value" id="stat-streak">—</div>
                     <div class="stat-label">Серия успехов</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value" id="stat-accuracy">—<span style="color: var(--neon-red);">%</span></div>
+                    <div class="stat-value" id="user-accuracy">—<span style="color: var(--neon-red);">%</span></div>
                     <div class="stat-label">Точность</div>
                 </div>
             </div>
@@ -1910,7 +1910,7 @@
                         <div class="section-count"><span id="achievements-count">—</span>/37</div>
                     </div>
                 </div>
-                <div class="achievements-scroll" id="achievements-container">
+                <div class="achievements-scroll" id="achievements-grid">
                     <!-- Будет заполнено динамически -->
                 </div>
             </div>
@@ -1936,7 +1936,7 @@
                 </div>
 
                 <!-- Список лидеров -->
-                <div class="leaderboard-list" id="leaderboard-container">
+                <div class="leaderboard-list" id="leaderboard-content">
                     <!-- Динамическое содержимое -->
                 </div>
             </div>
