feat: настроена компиляция frontend TypeScript файлов - Создана папка public/dist для скомпилированных JS файлов - Обновлены пути в HTML файлах с ./ на ./dist/ - Добавлены npm скрипты build:frontend и build:all - Исключена public/dist из основной TypeScript компиляции - Решена проблема загрузки JS файлов в браузере

--- a/public/game.html
+++ b/public/game.html
@@ -1333,14 +1333,14 @@
     </div>
 
     <!-- Системы JavaScript (не мигрированы) -->
-    <script src="achievement-system.js"></script>
-    <script src="game-interface.js"></script>
+    <script src="dist/achievement-system.js"></script>
+    <script src="dist/game-interface.js"></script>
 
     <!-- TypeScript модули приложения -->
-    <script type="module" src="types.js"></script>
-    <script type="module" src="game-core.js"></script>
-    <script type="module" src="auth.js"></script>
-    <script type="module" src="crime-app.js"></script>
+    <script type="module" src="dist/types.js"></script>
+    <script type="module" src="dist/game-core.js"></script>
+    <script type="module" src="dist/auth.js"></script>
+    <script type="module" src="dist/crime-app.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
