--- a/public/profile.html
+++ b/public/profile.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Creepster&family=Nosifer&family=Butcherman&family=JetBrains+Mono:wght@400;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="profile.css">
 
     <style>
         :root {
