--- a/public/profile.html
+++ b/public/profile.html
@@ -2019,6 +2019,11 @@
             try {
                 console.log('🚀 Начинаем инициализацию профиля...');
 
+                // Импортируем конфигурацию достижений
+                const { ACHIEVEMENTS_CONFIG } = await import('./dist/profile-config.js?v=' + Date.now());
+                window.ACHIEVEMENTS_CONFIG = ACHIEVEMENTS_CONFIG;
+                console.log('📋 Загружена конфигурация достижений:', ACHIEVEMENTS_CONFIG.length, 'достижений');
+
                 // Импортируем и инициализируем модуль профиля
                 const { CriminalTrustProfile } = await import('./dist/profile.js?v=' + Date.now());
 
