--- a/public/profile.html
+++ b/public/profile.html
@@ -736,19 +736,16 @@
         }
 
         .achievement-item {
-            min-width: 120px;
-            background: linear-gradient(135deg, rgba(26, 26, 26, 0.98) 0%, rgba(20, 20, 20, 0.99) 100%);
-            /* Более плотный фон */
+            min-width: 100px;
+            background: rgba(26, 26, 26, 0.95);
             border: 2px solid var(--blood-red);
-            border-radius: 16px;
-            padding: 16px;
+            border-radius: 12px;
+            padding: 12px;
             text-align: center;
             transition: all 0.3s ease;
             cursor: pointer;
             position: relative;
-            overflow: hidden;
-            backdrop-filter: blur(15px);
-            /* Добавляем размытие фона */
+            backdrop-filter: blur(10px);
         }
 
         .achievement-item::before {
@@ -866,10 +863,9 @@
         }
 
         .achievement-icon {
-            font-size: 2.2rem;
-            margin-bottom: 12px;
-            filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.5));
-            animation: iconFloat 3s ease-in-out infinite;
+            font-size: 1.8rem;
+            margin-bottom: 8px;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
             transition: all 0.3s ease;
         }
 
@@ -1338,6 +1334,7 @@
         }
 
         /* Модальное окно для достижений */
+        /* Компактное модальное окно для достижений */
         .achievement-modal {
             display: none;
             position: fixed;
@@ -1345,10 +1342,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.85);
+            background: rgba(0, 0, 0, 0.7);
             z-index: 1000;
-            backdrop-filter: blur(15px);
-            padding: 20px;
+            backdrop-filter: blur(8px);
+            padding: 16px;
             box-sizing: border-box;
         }
 
@@ -1356,7 +1353,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            animation: modalFadeIn 0.4s ease-out;
+            animation: modalFadeIn 0.3s ease-out;
         }
 
         @keyframes modalFadeIn {
@@ -1367,171 +1364,136 @@
 
             100% {
                 opacity: 1;
-                backdrop-filter: blur(15px);
+                backdrop-filter: blur(8px);
             }
         }
 
         .achievement-modal-content {
-            background: linear-gradient(145deg, rgba(20, 20, 20, 0.98), rgba(40, 10, 10, 0.95));
+            background: rgba(26, 26, 26, 0.98);
             border: 2px solid var(--blood-red);
-            border-radius: 24px;
-            padding: 40px 32px;
-            max-width: 450px;
+            border-radius: 20px;
+            padding: 24px 20px;
+            max-width: 340px;
             width: 100%;
             text-align: center;
             position: relative;
-            animation: modalSlideIn 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            animation: modalSlideIn 0.3s ease-out;
             box-shadow:
-                0 20px 60px rgba(0, 0, 0, 0.8),
-                0 0 0 1px rgba(220, 20, 60, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
-            overflow: hidden;
-        }
-
-        .achievement-modal-content::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background:
-                radial-gradient(circle at 20% 20%, rgba(220, 20, 60, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(139, 0, 0, 0.1) 0%, transparent 50%);
-            pointer-events: none;
+                0 10px 40px rgba(0, 0, 0, 0.6),
+                0 0 0 1px rgba(220, 20, 60, 0.2);
+            backdrop-filter: blur(10px);
         }
 
         @keyframes modalSlideIn {
             0% {
-                transform: translateY(-60px) scale(0.8) rotateX(10deg);
+                transform: translateY(-30px) scale(0.9);
                 opacity: 0;
-                filter: blur(5px);
             }
 
             100% {
-                transform: translateY(0) scale(1) rotateX(0deg);
+                transform: translateY(0) scale(1);
                 opacity: 1;
-                filter: blur(0);
             }
         }
 
         .achievement-modal-close {
             position: absolute;
-            top: 16px;
-            right: 16px;
-            background: none;
-            border: none;
+            top: 12px;
+            right: 12px;
+            background: rgba(139, 0, 0, 0.2);
+            border: 1px solid rgba(139, 0, 0, 0.4);
+            border-radius: 50%;
             color: var(--crimson);
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             cursor: pointer;
-            padding: 4px;
+            padding: 6px;
             line-height: 1;
+            width: 32px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s ease;
         }
 
         .achievement-modal-close:hover {
+            background: rgba(139, 0, 0, 0.4);
             color: var(--neon-red);
+            transform: scale(1.1);
+        }
+
+        /* Компактная шапка с иконкой и названием */
+        .achievement-header {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 16px;
+            padding-bottom: 12px;
+            border-bottom: 1px solid rgba(139, 0, 0, 0.3);
         }
 
         .achievement-modal-icon {
-            font-size: 4.5rem;
-            margin-bottom: 20px;
-            display: block;
-            animation: iconBounce 2s ease-in-out infinite;
-            text-shadow:
-                0 0 20px rgba(255, 215, 0, 0.5),
-                0 0 40px rgba(255, 215, 0, 0.3);
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
-            position: relative;
-            z-index: 2;
+            font-size: 2.5rem;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
+            animation: iconFloat 3s ease-in-out infinite;
         }
 
-        @keyframes iconBounce {
+        @keyframes iconFloat {
 
             0%,
             100% {
-                transform: translateY(0) scale(1);
-                text-shadow:
-                    0 0 20px rgba(255, 215, 0, 0.5),
-                    0 0 40px rgba(255, 215, 0, 0.3);
+                transform: translateY(0);
             }
 
             50% {
-                transform: translateY(-10px) scale(1.05);
-                text-shadow:
-                    0 0 25px rgba(255, 215, 0, 0.7),
-                    0 0 50px rgba(255, 215, 0, 0.5);
+                transform: translateY(-3px);
             }
+        }
+
+        /* Текст справа от иконки */
+        .achievement-text {
+            text-align: left;
+            flex: 1;
         }
 
         .achievement-modal-title {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 1.6rem;
-            font-weight: 800;
+            font-size: 1.1rem;
+            font-weight: 700;
             color: var(--crimson);
-            margin-bottom: 16px;
+            margin-bottom: 4px;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            text-shadow: 0 0 10px rgba(220, 20, 60, 0.5);
-            position: relative;
-            z-index: 2;
+            letter-spacing: 0.5px;
+            line-height: 1.2;
         }
 
         .achievement-modal-description {
             color: var(--silver);
-            line-height: 1.6;
-            margin-bottom: 24px;
-            font-size: 1rem;
+            font-size: 0.85rem;
+            line-height: 1.3;
             opacity: 0.9;
-            position: relative;
-            z-index: 2;
         }
 
         .achievement-modal-status {
-            padding: 12px 24px;
-            border-radius: 25px;
-            font-weight: 800;
+            padding: 8px 16px;
+            border-radius: 16px;
+            font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 2px;
-            font-size: 1rem;
+            letter-spacing: 1px;
+            font-size: 0.75rem;
             font-family: 'JetBrains Mono', monospace;
-            margin-top: 24px;
+            margin-top: 16px;
             display: inline-block;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            position: relative;
-            z-index: 2;
         }
 
         .achievement-modal-status.unlocked {
-            background: linear-gradient(135deg, var(--blood-red), var(--crimson), #FF4444);
+            background: var(--blood-gradient);
             color: var(--bone);
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-            box-shadow:
-                0 4px 20px rgba(220, 20, 60, 0.4),
-                inset 0 1px 0 rgba(255, 255, 255, 0.2);
-            animation: statusGlow 2s ease-in-out infinite;
-        }
-
-        @keyframes statusGlow {
-
-            0%,
-            100% {
-                box-shadow:
-                    0 4px 20px rgba(220, 20, 60, 0.4),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.2);
-            }
-
-            50% {
-                box-shadow:
-                    0 4px 25px rgba(220, 20, 60, 0.6),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.3);
-            }
         }
 
         .achievement-modal-status.locked {
-            background: linear-gradient(135deg, var(--ash), rgba(60, 60, 60, 1));
+            background: var(--ash);
             color: var(--fog);
-            border: 2px solid rgba(100, 100, 100, 0.3);
         }
 
         .rank-badge {
@@ -1563,103 +1525,64 @@
             }
         }
 
-        /* Стили для прогресса достижений */
+        /* Компактный прогресс достижений */
         .achievement-progress {
-            margin: 24px 0;
-            padding: 20px;
-            background:
-                linear-gradient(145deg, rgba(26, 26, 26, 0.8), rgba(20, 20, 20, 0.9)),
-                radial-gradient(circle at center, rgba(220, 20, 60, 0.05) 0%, transparent 70%);
-            border-radius: 16px;
-            border: 2px solid rgba(139, 0, 0, 0.4);
-            box-shadow:
-                inset 0 1px 0 rgba(255, 255, 255, 0.1),
-                0 4px 20px rgba(0, 0, 0, 0.3);
-            position: relative;
-            z-index: 2;
+            margin: 16px 0;
+            padding: 12px;
+            background: rgba(20, 20, 20, 0.6);
+            border-radius: 12px;
+            border: 1px solid rgba(139, 0, 0, 0.3);
         }
 
         .progress-label {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 12px;
-            font-size: 0.95rem;
+            margin-bottom: 8px;
+            font-size: 0.8rem;
             color: var(--silver);
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
+            font-weight: 600;
         }
 
         .progress-label span:first-child {
             color: var(--crimson);
-            font-size: 0.85rem;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .progress-label span:last-child {
             color: var(--bone);
             font-family: 'JetBrains Mono', monospace;
-            background: rgba(139, 0, 0, 0.2);
-            padding: 4px 8px;
-            border-radius: 8px;
-            border: 1px solid rgba(139, 0, 0, 0.3);
+            font-size: 0.8rem;
         }
 
         .progress-bar-container {
-            height: 16px;
-            background:
-                linear-gradient(90deg, rgba(40, 40, 40, 1), rgba(30, 30, 30, 1));
-            border-radius: 10px;
+            height: 8px;
+            background: rgba(40, 40, 40, 1);
+            border-radius: 4px;
             overflow: hidden;
-            margin-bottom: 12px;
-            border: 2px solid rgba(139, 0, 0, 0.4);
-            box-shadow:
-                inset 0 2px 4px rgba(0, 0, 0, 0.5),
-                0 0 10px rgba(139, 0, 0, 0.2);
-            position: relative;
+            margin-bottom: 6px;
+            border: 1px solid rgba(139, 0, 0, 0.2);
         }
 
         .progress-bar {
             height: 100%;
-            background: linear-gradient(90deg,
-                    #8B0000 0%,
-                    #DC143C 30%,
-                    #FF4444 60%,
-                    #DC143C 100%);
-            border-radius: 8px;
-            transition: width 1s cubic-bezier(0.4, 0, 0.2, 1);
+            background: linear-gradient(90deg, var(--blood-red), var(--crimson));
+            border-radius: 4px;
+            transition: width 0.8s ease;
             position: relative;
-            box-shadow:
-                0 0 15px rgba(220, 20, 60, 0.6),
-                inset 0 1px 0 rgba(255, 255, 255, 0.2);
         }
 
         .progress-bar::before {
             content: '';
             position: absolute;
             top: 0;
-            left: -100%;
-            width: 100%;
+            left: -50%;
+            width: 50%;
             height: 100%;
-            background: linear-gradient(90deg,
-                    transparent,
-                    rgba(255, 255, 255, 0.4),
-                    transparent);
-            animation: progressShine 2.5s linear infinite;
-        }
-
-        .progress-bar::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(90deg,
-                    rgba(255, 255, 255, 0.2) 0%,
-                    rgba(255, 255, 255, 0.1) 50%,
-                    rgba(255, 255, 255, 0.05) 100%);
-            border-radius: 8px;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3));
+            animation: progressShine 2s linear infinite;
         }
 
         @keyframes progressShine {
@@ -1674,82 +1597,58 @@
 
         .progress-percentage {
             text-align: center;
-            font-size: 1.1rem;
+            font-size: 0.75rem;
             color: var(--crimson);
-            font-weight: 800;
+            font-weight: 700;
             font-family: 'JetBrains Mono', monospace;
-            text-shadow: 0 0 8px rgba(220, 20, 60, 0.6);
-            background: rgba(139, 0, 0, 0.15);
-            padding: 6px 12px;
-            border-radius: 12px;
-            border: 1px solid rgba(139, 0, 0, 0.3);
-            display: inline-block;
         }
 
-        /* Стили для требований достижений */
+        /* Компактные блоки информации */
         .achievement-requirement {
-            margin: 20px 0;
-            padding: 16px;
-            background:
-                linear-gradient(145deg, rgba(139, 0, 0, 0.15), rgba(100, 0, 0, 0.1)),
-                radial-gradient(circle at center, rgba(220, 20, 60, 0.05) 0%, transparent 70%);
-            border-radius: 12px;
-            border: 2px solid rgba(139, 0, 0, 0.3);
-            box-shadow:
-                inset 0 1px 0 rgba(255, 255, 255, 0.1),
-                0 4px 15px rgba(0, 0, 0, 0.2);
-            position: relative;
-            z-index: 2;
+            margin: 12px 0;
+            padding: 10px;
+            background: rgba(139, 0, 0, 0.1);
+            border-radius: 8px;
+            border-left: 3px solid var(--blood-red);
         }
 
         .requirement-title {
-            font-size: 0.9rem;
+            font-size: 0.7rem;
             color: var(--crimson);
-            font-weight: 800;
-            margin-bottom: 8px;
+            font-weight: 700;
+            margin-bottom: 4px;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            text-shadow: 0 0 5px rgba(220, 20, 60, 0.5);
+            letter-spacing: 0.5px;
         }
 
         .requirement-text {
             color: var(--silver);
-            font-size: 1rem;
-            line-height: 1.5;
-            font-weight: 500;
+            font-size: 0.8rem;
+            line-height: 1.3;
         }
 
-        /* Стили для наград достижений */
         .achievement-reward {
-            margin: 20px 0;
-            padding: 16px;
-            background:
-                linear-gradient(145deg, rgba(255, 215, 0, 0.15), rgba(200, 170, 0, 0.1)),
-                radial-gradient(circle at center, rgba(255, 215, 0, 0.1) 0%, transparent 70%);
-            border-radius: 12px;
-            border: 2px solid rgba(255, 215, 0, 0.4);
-            box-shadow:
-                inset 0 1px 0 rgba(255, 255, 255, 0.1),
-                0 4px 15px rgba(255, 215, 0, 0.1);
-            position: relative;
-            z-index: 2;
+            margin: 12px 0;
+            padding: 10px;
+            background: rgba(255, 215, 0, 0.1);
+            border-radius: 8px;
+            border-left: 3px solid #FFD700;
         }
 
         .reward-title {
-            font-size: 0.9rem;
+            font-size: 0.7rem;
             color: #FFD700;
-            font-weight: 800;
-            margin-bottom: 8px;
+            font-weight: 700;
+            margin-bottom: 4px;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            text-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+            letter-spacing: 0.5px;
         }
 
         .reward-text {
             color: var(--bone);
-            font-size: 1rem;
-            line-height: 1.5;
-            font-weight: 600;
+            font-size: 0.8rem;
+            line-height: 1.3;
+            font-weight: 500;
         }
 
         /* Декоративные элементы фона */
@@ -2093,13 +1992,19 @@
         </div>
     </div>
 
-    <!-- Модальное окно для достижений -->
+    <!-- Компактное модальное окно для достижений -->
     <div class="achievement-modal" id="achievement-modal">
         <div class="achievement-modal-content">
             <button class="achievement-modal-close" id="modal-close">&times;</button>
-            <div class="achievement-modal-icon" id="modal-icon">🏆</div>
-            <div class="achievement-modal-title" id="modal-title">Название достижения</div>
-            <div class="achievement-modal-description" id="modal-description">Описание достижения</div>
+
+            <!-- Компактная шапка -->
+            <div class="achievement-header">
+                <div class="achievement-modal-icon" id="modal-icon">🏆</div>
+                <div class="achievement-text">
+                    <div class="achievement-modal-title" id="modal-title">Название достижения</div>
+                    <div class="achievement-modal-description" id="modal-description">Описание достижения</div>
+                </div>
+            </div>
 
             <!-- Прогресс к достижению -->
             <div class="achievement-progress" id="modal-progress" style="display: none;">
