--- a/public/profile.html
+++ b/public/profile.html
@@ -724,29 +724,35 @@
         /* 🎯 СИСТЕМА ДОСТИЖЕНИЙ - ДЕТЕКТИВНЫЕ КАРТОЧКИ */
         .achievements-scroll {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-            gap: 16px;
-            padding: 8px;
-            max-height: 400px;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 20px;
+            padding: 12px;
+            max-height: 500px;
             overflow-y: auto;
         }
 
-        /* Детективная карточка */
+        /* Детективная карточка-досье */
         .achievement-item {
             background:
-                linear-gradient(145deg, #2a2a2a 0%, #1a1a1a 100%);
-            border: 2px solid #8B0000;
-            border-radius: 12px;
-            padding: 16px 12px;
+                linear-gradient(145deg, #3a3a3a 0%, #2d2d2d 100%),
+                repeating-linear-gradient(0deg,
+                    transparent,
+                    transparent 3px,
+                    rgba(139, 0, 0, 0.1) 3px,
+                    rgba(139, 0, 0, 0.1) 4px);
+            border: 2px solid #DC143C;
+            border-radius: 16px;
+            padding: 20px 16px;
             cursor: pointer;
             position: relative;
             transition: all 0.3s ease;
             overflow: hidden;
             box-shadow:
-                0 4px 12px rgba(139, 0, 0, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+                0 6px 20px rgba(220, 20, 60, 0.4),
+                inset 0 1px 0 rgba(255, 255, 255, 0.15),
+                0 2px 10px rgba(0, 0, 0, 0.8);
             text-align: center;
-            min-height: 140px;
+            min-height: 160px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -789,55 +795,75 @@
         }
 
         .achievement-item:not(.locked):hover {
-            border-color: rgba(255, 215, 0, 0.8);
+            transform: translateY(-6px) scale(1.05);
+            border-color: #FFD700;
             box-shadow:
-                0 4px 16px rgba(255, 215, 0, 0.2),
-                0 0 0 1px rgba(255, 215, 0, 0.4),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+                0 12px 35px rgba(220, 20, 60, 0.7),
+                0 0 0 2px rgba(255, 215, 0, 0.6),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3),
+                0 4px 15px rgba(0, 0, 0, 0.9);
         }
 
         /* Заблокированные достижения */
         .achievement-item.locked {
-            opacity: 0.5;
-            filter: grayscale(0.7);
+            opacity: 0.75;
+            filter: grayscale(0.5);
+            background:
+                linear-gradient(145deg, #2a2a2a 0%, #1d1d1d 100%),
+                repeating-linear-gradient(0deg,
+                    transparent,
+                    transparent 3px,
+                    rgba(105, 105, 105, 0.1) 3px,
+                    rgba(105, 105, 105, 0.1) 4px);
+            border-color: #666;
         }
 
         .achievement-item.locked:hover {
-            opacity: 0.7;
-            transform: translateY(-1px);
+            opacity: 0.9;
+            transform: translateY(-3px) scale(1.02);
+            border-color: #888;
+            box-shadow:
+                0 6px 15px rgba(105, 105, 105, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
         }
 
         /* Статус печать в углу */
         .achievement-status-stamp {
             position: absolute;
-            top: 8px;
-            right: 8px;
-            width: 28px;
-            height: 28px;
+            top: 12px;
+            right: 12px;
+            width: 34px;
+            height: 34px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 11px;
+            font-size: 13px;
             font-weight: 900;
             text-transform: uppercase;
             font-family: 'JetBrains Mono', monospace;
-            border: 2px solid;
-            animation: detectiveStamp 2s ease-in-out infinite;
+            border: 3px solid;
+            animation: detectiveStamp 3s ease-in-out infinite;
+            z-index: 10;
         }
 
         .achievement-status-stamp.unlocked {
             background: radial-gradient(circle, #DC143C 0%, #8B0000 100%);
             color: #FFF;
             border-color: #FFD700;
-            box-shadow: 0 0 12px rgba(220, 20, 60, 0.6);
+            box-shadow:
+                0 0 15px rgba(220, 20, 60, 0.8),
+                0 0 25px rgba(255, 215, 0, 0.4),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3);
         }
 
         .achievement-status-stamp.locked {
-            background: radial-gradient(circle, #444 0%, #222 100%);
-            color: #888;
-            border-color: #666;
-            box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+            background: radial-gradient(circle, #555 0%, #333 100%);
+            color: #AAA;
+            border-color: #777;
+            box-shadow:
+                0 0 8px rgba(0, 0, 0, 0.6),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
         }
 
         @keyframes detectiveStamp {
@@ -856,49 +882,59 @@
 
         /* Иконка достижения */
         .achievement-icon {
-            font-size: 2rem;
-            margin-bottom: 8px;
+            font-size: 2.5rem;
+            margin-bottom: 12px;
             display: block;
-            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.5));
+            filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.8));
             transition: all 0.3s ease;
         }
 
         .achievement-item:not(.locked) .achievement-icon {
             filter:
-                drop-shadow(0 2px 4px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 8px rgba(255, 215, 0, 0.3));
+                drop-shadow(0 3px 6px rgba(0, 0, 0, 0.8)) drop-shadow(0 0 12px rgba(255, 215, 0, 0.5)) drop-shadow(0 0 20px rgba(220, 20, 60, 0.3));
+        }
+
+        .achievement-item.locked .achievement-icon {
+            filter:
+                drop-shadow(0 2px 4px rgba(0, 0, 0, 0.6)) grayscale(0.7) opacity(0.8);
         }
 
         /* Название достижения */
         .achievement-name {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 0.85rem;
-            font-weight: 700;
-            color: #F5F5DC;
-            line-height: 1.2;
-            margin-bottom: 8px;
+            font-size: 0.9rem;
+            font-weight: 800;
+            color: #FFFFFF;
+            line-height: 1.3;
+            margin-bottom: 10px;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+            letter-spacing: 0.8px;
+            text-shadow:
+                0 2px 4px rgba(0, 0, 0, 0.9),
+                0 0 8px rgba(255, 215, 0, 0.3);
         }
 
         .achievement-item.locked .achievement-name {
-            color: #999;
+            color: #BBB;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
         }
 
         /* Краткое описание */
         .achievement-summary {
-            font-size: 0.7rem;
-            color: #DDD;
-            opacity: 0.9;
-            line-height: 1.4;
-            margin-bottom: 8px;
+            font-size: 0.75rem;
+            color: #F0F0F0;
+            opacity: 0.95;
+            line-height: 1.5;
+            margin-bottom: 10px;
             text-align: center;
             flex-grow: 1;
+            font-weight: 500;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
         }
 
         .achievement-item.locked .achievement-summary {
-            color: #777;
-            opacity: 0.7;
+            color: #999;
+            opacity: 0.8;
         }
 
         /* Прогресс-полоска внизу */
