--- a/public/profile.html
+++ b/public/profile.html
@@ -724,10 +724,10 @@
         /* 🎯 СИСТЕМА ДОСТИЖЕНИЙ - ДЕТЕКТИВНЫЕ КАРТОЧКИ */
         .achievements-scroll {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 16px;
             padding: 12px;
-            max-height: 500px;
+            max-height: 450px;
             overflow-y: auto;
         }
 
@@ -741,21 +741,23 @@
                     rgba(139, 0, 0, 0.1) 3px,
                     rgba(139, 0, 0, 0.1) 4px);
             border: 2px solid #DC143C;
-            border-radius: 16px;
-            padding: 20px 16px;
+            border-radius: 12px;
+            padding: 14px 12px;
             cursor: pointer;
             position: relative;
             transition: all 0.3s ease;
             overflow: hidden;
             box-shadow:
-                0 6px 20px rgba(220, 20, 60, 0.4),
+                0 4px 15px rgba(220, 20, 60, 0.4),
                 inset 0 1px 0 rgba(255, 255, 255, 0.15),
-                0 2px 10px rgba(0, 0, 0, 0.8);
+                0 2px 8px rgba(0, 0, 0, 0.8);
             text-align: center;
-            min-height: 160px;
+            min-height: 120px;
+            max-height: 140px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            aspect-ratio: 1 / 1.1;
         }
 
         /* Эффект бумаги */
@@ -830,19 +832,19 @@
         /* Статус печать в углу */
         .achievement-status-stamp {
             position: absolute;
-            top: 12px;
-            right: 12px;
-            width: 34px;
-            height: 34px;
+            top: 8px;
+            right: 8px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 13px;
+            font-size: 11px;
             font-weight: 900;
             text-transform: uppercase;
             font-family: 'JetBrains Mono', monospace;
-            border: 3px solid;
+            border: 2px solid;
             animation: detectiveStamp 3s ease-in-out infinite;
             z-index: 10;
         }
@@ -882,8 +884,8 @@
 
         /* Иконка достижения */
         .achievement-icon {
-            font-size: 2.5rem;
-            margin-bottom: 12px;
+            font-size: 2rem;
+            margin-bottom: 8px;
             display: block;
             filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.8));
             transition: all 0.3s ease;
@@ -902,13 +904,13 @@
         /* Название достижения */
         .achievement-name {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 0.9rem;
+            font-size: 0.75rem;
             font-weight: 800;
             color: #FFFFFF;
-            line-height: 1.3;
-            margin-bottom: 10px;
+            line-height: 1.2;
+            margin-bottom: 6px;
             text-transform: uppercase;
-            letter-spacing: 0.8px;
+            letter-spacing: 0.5px;
             text-shadow:
                 0 2px 4px rgba(0, 0, 0, 0.9),
                 0 0 8px rgba(255, 215, 0, 0.3);
@@ -921,11 +923,11 @@
 
         /* Краткое описание */
         .achievement-summary {
-            font-size: 0.75rem;
+            font-size: 0.65rem;
             color: #F0F0F0;
             opacity: 0.95;
-            line-height: 1.5;
-            margin-bottom: 10px;
+            line-height: 1.3;
+            margin-bottom: 6px;
             text-align: center;
             flex-grow: 1;
             font-weight: 500;
